@@ -367,3 +367,7 @@
 - switched to Zune as default
 - removed user_confirm() as it is not used
 
+0060
+- implemented getsize via POSIX stat()
+- updated path of test.script
+
